feat: integrate Conan for dependency management and enhance CMake build system
- Added Conan integration for automatic dependency management
- Restructured CMakeLists.txt with modular sections and improved readability
- Enhanced CUDA and C++ compiler optimization flags
- Added Python extension module support via pybind11
- Implemented optional GTest-based testing framework
- Updated .gitignore to handle egg-info directories more precisely
- Added pyproject.toml with scikit-build-core and Conan support
- Refactored Python imports to use relative imports
- Added main.py as the entry point for the CLI application

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 build/
 build/*
+**/astroflow.egg-info/*
+lingh/**
+frbcand/**
 .cache
 CMakeUserPresets.json
 *.so
@@ -31,3 +34,4 @@ ql/*
 *.txt
 *.csv
 *.yaml
+**/*png
