--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,12 +1,18 @@
 astropy==7.0.1
-matplotlib==3.10.1
+loguru==0.7.3
+matplotlib==3.10.5
 numba==0.61.0
-numpy==2.2.4
+numpy>=2.1.3
 opencv_python==4.11.0.86
-pandas==2.2.3
+pandas==2.3.1
+PyYAML==6.0.2
+scipy==1.16.1
 seaborn==0.13.2
+sympy==1.13.1
 torch==2.6.0
 torchvision==0.21.0
 tqdm==4.67.1
-typing_extensions==4.13.1
+typing_extensions==4.14.1
+ultralytics==8.3.167
 your==0.6.7
+pybind11==3.0.0
