feat(docker): Add manylinux_2_28_cuda129_x86_64 Dockerfile for CUDA 12.9 support
- Introduce a new Dockerfile for building Python wheels with CUDA 12.9 on manylinux_2_28 x86_64.
- Update pyproject.toml to configure cibuildwheel for manylinux_2_28 and CUDA builds.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,3 +82,12 @@ exclude = [
   ".github/**",
 ]
 
+[tool.cibuildwheel]
+build = ["cp310-*", "cp311-*", "cp312-*"]
+archs = ["x86_64"]
+skip = ["*-musllinux_*", "pp*"]
+
+[tool.cibuildwheel.linux]
+manylinux-version = "manylinux_2_28"
+repair_command = ["auditwheel repair -w {dest_dir} {wheel}"]
+
